fix: Divider block not visible

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -71,6 +71,15 @@ pre[class*='language-'] {
 .notion-quote {
   padding: 0.2em 0.9em;
 }
+.notion-hr {
+  border-top-width: 1px;
+  border-top-style: solid;
+}
+@media (prefers-color-scheme: dark) {
+  .notion-hr {
+    border-top-color: rgba(255, 255, 255, 0.13);
+  }
+}
 .notion-list {
   width: 100%;
 }
